--- a/inventory-poc-cluster.erb
+++ b/inventory-poc-cluster.erb
@@ -29,6 +29,9 @@ openshift_master_cluster_public_hostname=openshift-cluster.example.com
 # override the default controller lease ttl
 #osm_controller_lease_ttl=30
 
+# Enable Network Time Protocol (NTP)
+openshift_clock_enabled=true
+
 # host group for masters
 [masters]
 master1.example.com openshift_schedulable=true
